--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <script src="./script.js" defer></script>
-    <sc
-  </head>
+   </head>
 
   <body>
-    <div class = "card">
-     <div class = "search">
-        <input type = "text" class = "search-bar" placeholder="Search">
+    <header>
+      <h1 class="header"> Weather Dash Board</h1>
+    </header>
+    <div class = "flex -container">
+        <h2>City Search</h2>
+        <div class = "search">
+          <input type = "text" class = "search-bar" placeholder="Search">
+          
 
 
 
